<resources>
    <string name="app_name">Secure Delivery</string>
    <string name="welcome">Welcome</string>
    <string name="mobile">Price 15000 Tk</string>
    <string name="laptop">Price 500000 Tk</string>
    <string name="watch">Price 1200 Tk</string>
    <string name="mouse">Price 800 Tk</string>
    <string name="router">Price 1500 Tk</string>
    <string name="camera">Price 400000 Tk</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgotPassword">Forgot Password? Click Here.</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="worker_list">Workers List</string>
    <string name="order_list">Orders List</string>
    <string name="assign_orders">Assign Products</string>
    <string name="receive_transactions">Receive Amount</string>
    <string name="undelivered_products">Receive Products</string>
    <string name="complain">Complain</string>
    <string name="name">Name</string>
    <string name="performance_rating">Performance Rating</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="choose_workers">Choose Workers</string>
</resources>