<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="3"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ManagerHomeActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:clipToPadding="false">

            <androidx.cardview.widget.CardView
                android:foreground="?android:selectableItemBackground"
                android:clickable="true"
                android:layout_margin="10dp"
                android:id="@+id/workersCardViewId"
                android:onClick="workersList"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:padding="10dp"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/list_icon"
                        android:background="@drawable/circlebackgroundpurple"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/purple_200"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/worker_list"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceLarge"
                        />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/ordersCardViewId"
            android:onClick="ordersList"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/product_icon"
                    android:background="@drawable/circlebackgroundblue"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/blue"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/order_list"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/assignCardViewId"
            android:onClick="assignProducts"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/assign_icon"
                    android:background="@drawable/circlebackgroundgreen"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/green"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/assign_orders"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:onClick="receiveAmount"
            android:id="@+id/receiveTransactionsCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/money_icon"
                    android:background="@drawable/circlebackgroundpink"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/material_pink"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/receive_transactions"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/receiveProductViewId"
            android:onClick="receiveProduct"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/order_icon"
                    android:background="@drawable/circlebackgroundteal"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/teal_200"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/undelivered_products"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/complainCardViewId"
            android:onClick="complain"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/report_icon"
                    android:background="@drawable/circlebackgroundred"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/red"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/complain"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>