<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="3"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CustomerHomeActivity"
   >




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome, Customer! Place your order here!"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"

        />
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/workersCardViewId"
            android:onClick="placeordercamera"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/camera"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/purple_200"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/camera"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/ordersCardViewId"
            android:onClick="placeorderphone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/phone"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/blue"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/mobile"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/receiveProductViewId"
            android:onClick="placeorderheadphone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/headphone"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/teal_200"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/router"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/complainCardViewId"
            android:onClick="placeorderwatch"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/watch"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/red"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/watch"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>



    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/assignCardViewId"
            android:onClick="placeordermouse"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/mouse"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/green"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/mouse"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:onClick="placeorderSoundBox"
            android:id="@+id/receiveTransactionsCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/soundbox"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/material_pink"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/router"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>